...
    
    weak var delegate: WebViewViewControllerDelegate?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        view.accessibilityIdentifier = "WebViewViewController"
        webView.accessibilityIdentifier = "authWebView"
        progressView.accessibilityIdentifier = "authProgressView"
        webView.navigationDelegate = self
		presenter?.viewDidLoad()
        estimatedProgressObservation = webView.observe(\.estimatedProgress,
            options: [],
            changeHandler: { [weak self] _, _ in
...
